tests/local/gc/gc-subtyping-too-deep.wast
(assert_invalid
  (module
    (type (;0;) (sub (struct)))
    (type (;1;) (sub 0 (struct)))
    (type (;2;) (sub 1 (struct)))
    (type (;3;) (sub 2 (struct)))
    (type (;4;) (sub 3 (struct)))
    (type (;5;) (sub 4 (struct)))
    (type (;6;) (sub 5 (struct)))
    (type (;7;) (sub 6 (struct)))
    (type (;8;) (sub 7 (struct)))
    (type (;9;) (sub 8 (struct)))
    (type (;10;) (sub 9 (struct)))
    (type (;11;) (sub 10 (struct)))
    (type (;12;) (sub 11 (struct)))
    (type (;13;) (sub 12 (struct)))
    (type (;14;) (sub 13 (struct)))
    (type (;15;) (sub 14 (struct)))
    (type (;16;) (sub 15 (struct)))
    (type (;17;) (sub 16 (struct)))
    (type (;18;) (sub 17 (struct)))
    (type (;19;) (sub 18 (struct)))
    (type (;20;) (sub 19 (struct)))
    (type (;21;) (sub 20 (struct)))
    (type (;22;) (sub 21 (struct)))
    (type (;23;) (sub 22 (struct)))
    (type (;24;) (sub 23 (struct)))
    (type (;25;) (sub 24 (struct)))
    (type (;26;) (sub 25 (struct)))
    (type (;27;) (sub 26 (struct)))
    (type (;28;) (sub 27 (struct)))
    (type (;29;) (sub 28 (struct)))
    (type (;30;) (sub 29 (struct)))
    (type (;31;) (sub 30 (struct)))
    (type (;32;) (sub 31 (struct)))
    (type (;33;) (sub 32 (struct)))
    (type (;34;) (sub 33 (struct)))
    (type (;35;) (sub 34 (struct)))
    (type (;36;) (sub 35 (struct)))
    (type (;37;) (sub 36 (struct)))
    (type (;38;) (sub 37 (struct)))
    (type (;39;) (sub 38 (struct)))
    (type (;40;) (sub 39 (struct)))
    (type (;41;) (sub 40 (struct)))
    (type (;42;) (sub 41 (struct)))
    (type (;43;) (sub 42 (struct)))
    (type (;44;) (sub 43 (struct)))
    (type (;45;) (sub 44 (struct)))
    (type (;46;) (sub 45 (struct)))
    (type (;47;) (sub 46 (struct)))
    (type (;48;) (sub 47 (struct)))
    (type (;49;) (sub 48 (struct)))
    (type (;50;) (sub 49 (struct)))
    (type (;51;) (sub 50 (struct)))
    (type (;52;) (sub 51 (struct)))
    (type (;53;) (sub 52 (struct)))
    (type (;54;) (sub 53 (struct)))
    (type (;55;) (sub 54 (struct)))
    (type (;56;) (sub 55 (struct)))
    (type (;57;) (sub 56 (struct)))
    (type (;58;) (sub 57 (struct)))
    (type (;59;) (sub 58 (struct)))
    (type (;60;) (sub 59 (struct)))
    (type (;61;) (sub 60 (struct)))
    (type (;62;) (sub 61 (struct)))
    (type (;63;) (sub 62 (struct)))
    (type (;64;) (sub 63 (struct)))
  )
  "sub type hierarchy too deep: found depth 64, cannot exceed depth 63"
)
